reduce codexslop