@@ -6,6 +6,7 @@ import org.bukkit.command.Command;
 
 import java.util.List;
 import java.util.Locale;
+import org.apache.commons.lang3.StringUtils;
 
 public final class CommandUtils
 {
@@ -15,28 +16,32 @@ public final class CommandUtils
 
     public static boolean matchesCommand(Plex plugin, String commandLine, List<String> commandNames)
     {
-        if (commandLine == null || commandLine.isBlank())
+        if (StringUtils.isBlank(commandLine))
         {
             return false;
         }
 
         String input = commandLine.charAt(0) == '/' ? commandLine.substring(1) : commandLine;
-        if (input.isBlank())
-        {
-            return false;
-        }
-
         String label = input.split("\\s+", 2)[0].toLowerCase(Locale.ROOT);
-        String bareLabel = label.contains(":") ? label.substring(label.indexOf(':') + 1) : label;
+        int namespaceSeparator = label.indexOf(':');
+        String bareLabel = label.substring(namespaceSeparator + 1);
         Command enteredCommand = Bukkit.getCommandMap().getCommand(label);
 
         for (String commandName : commandNames)
         {
-            if (commandName.equalsIgnoreCase(label) || commandName.equalsIgnoreCase(bareLabel))
+            if (commandName.equalsIgnoreCase(label))
             {
                 return true;
             }
-            if (plugin.getCommandHandler() != null && plugin.getCommandHandler().isAliasFor(commandName, bareLabel))
+            if (commandName.equalsIgnoreCase(bareLabel))
+            {
+                return true;
+            }
+            if (plugin.getCommandHandler() == null)
+            {
+                continue;
+            }
+            if (plugin.getCommandHandler().isAliasFor(commandName, bareLabel))
             {
                 return true;
             }
